--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@ p {
     margin-top: 0;
     margin-bottom: 0;
 }
-ul, 
+
+ul,
 ol {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
 }
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -27,743 +29,113 @@ ol {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-.container{
-    width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
+
+.container {
+
     padding-left: 15px;
     padding-right: 15px;
 }
+
 img {
     display: block;
 }
-.list{
+
+.list {
     list-style-type: none;
 }
-.link{
+
+.link {
     text-decoration: none;
 }
-button{
+
+button {
     cursor: pointer;
 }
-body{
+
+body {
     font-family: 'Roboto', sans-serif;
     color: #2E2F42;
 }
+
 /* =======Common styles======= */
-.body{
-    color: #434455;
-    background-color: #FFFFFF;
-}
 
-/* =======Header styles======= */
-.logo{
-      
-       margin-right: 76px; 
-        font-family: 'Raleway', sans-serif;
-        font-size: 18px;
-        font-weight: 700;
-        line-height:1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
-        color: #4d5ae5;
-    }
-    .logo:hover,
-    .logo:focus{
-        color: #404bbf;
-    }
-    .page-navigation{
-        display: flex;
-        align-items: center;
-       
-
-       
-    }
+/* ========Header Mobile Styles====== */
 .page-header{
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 1px 6px rgba(46, 47, 66, 0.08);
+    padding-top: 17.5px;
+    padding-bottom: 17.5px;
 }
-    .menu{
-        display: flex;
-        gap: 40px;
-       
-
-    }
-    .menu-item{
-        display: flex;
-        gap: 40px;
-    }
-   .main-conteiner{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-   
-
-   }
-    .studio{
-        color: #2e2f42;
-    }
-    .current{
-    position: relative;
-    color: #404bbf;
-    }
-.menu-link{
-    padding: 24px 0;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:#2E2F42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.menu{
+    display: none;
 }
-.current::after{
- 
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #404BBF;
-    content: '';
-}
-.menu-link:hover,
-.menu-link:focus{
-    color:#404bbf;
-}
-/* =======Header styles======= */
-
-
-
-/*======== Adsress styles====== */
 .address{
-   
-    gap: 40px;
-    display: flex;
-    font-style: normal;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: none;
 }
-.address-link{
-    padding-left: 15px;
-    padding-right: 15px;
-    display: flex;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.address-link:hover,
-.address-link:focus{
-    color: #404BBF;
-}
-/* =======Hero======= */
-.main-title{
-    background-color: #2e2f42;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7), 
-        rgba(46, 47, 66, 0.7)),
-        url(../images/hero/people-office1.jpg);
-    background-size: cover;
-    max-width: 1440px;
-    background-repeat: no-repeat;
-    background-position: center;
-    
-}
-.title{
-        max-width: 496px;
-        margin-left: auto;
-        margin-right: auto;   
-        margin-bottom: 48px;     
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        font-size: 56px;
-        font-weight: 700;
-        line-height: 1.07;
-        letter-spacing: 0.02em;
-        color:#FFF;
-        
-}
-.order-service{
-        margin-left: auto;
-        margin-right: auto;
-        min-width: 169px;        
-        gap: 10px;
-        display: block;
-        height: 56px;
-        border: none;
-        border-radius: 4px;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        background-color: #4D5AE5;
-        color: #FFF;
-        font-family: 'Roboto', sans-serif;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.order-service:hover,
-.order-service:focus
-{
-    background-color: #404BBF;
-    
-}
-.page-navigation:hover,
-.page-navigation:focus{
-    color: page-navigation;
-}
-
-/* ======Benefits==== */
-.benefits-list{
-display: flex;
-align-items: center;
-justify-content: center;
-height: 112px;
-background-color: #f4f4fd;
-border-radius: 4px;
-margin-bottom: 8px;
-}
-.strengths-item{
-    display: flex;
-    gap: 24px;
-}
-.benefits{
-    margin-bottom: 8px;
-}
-.benefits-section{
-    width: calc((100% - 72px) / 4);
-}
-.strengths{
-    font-family: 'Roboto', sans-serif;
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
-.strengths-list{
-    width: calc((100% - 72px) / 4);
-}
-.strengths-name{
-margin-bottom: 8px;
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2; 
-letter-spacing: 0.02em;
-color: var(--NAVY-BLUE, #2E2F42);
-}
-.strengths-descr{
-
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--SLATE, #434455);
-}
-
-
-/* =======Team========= */
-
-
-.team{
-    
-    background-color: #F4F4FD;
-    padding: 120px 0;
-}
-.team-member{
-    display: flex;
-    gap: 24px;
-    font-family: 'Roboto', sans-serif;
-}
-
-.group{
-        margin-bottom: 72px;
-        text-align: center;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        text-transform: capitalize;
-        color: var(--NAVY-BLUE, #2E2F42);
-}
-.acquaintance{
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.name{
-    
-    padding-top: 32px;
-    padding-bottom: 32px;
-    border-radius: 0px 0px 4px 4px;
-}
-
-.section-heading{
-        text-align: center;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2;
-        letter-spacing:0.02em;
-        color: #2E2F42;
-        padding-bottom: 8px;
-
-
-}
-.section-description{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
-        text-align: center;
-        padding-bottom: 8px;
-}
-.benefits-item{
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-
-}
-.benefits-link{
-    width: 40px;
-    height: 40px;
-}
-
-
-
-.benefits-list-icon{
-    width: 100%;
-    height: 100%;
-    background-color:#4d5ae5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.benefits-list-icon:hover,
-.benefits-list-icon:focus{
-    background-color: #404bbf;
-}
-.benefits-icon{
-    fill: #f4f4fd;
-}
-/* ======Team======== */
-
-
-
-/* =====Portfolio====== */
-.portfolio{
-    font-family: 'Roboto', sans-serif;
-    padding-top: 120px;
-    padding-bottom: 120px;
-
-}
-.portfolio-title{
-        margin-bottom: 72px;
-        text-align: center;
-        font-size: 36px;
-        font-weight: 700;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        color: #2E2F42;
-}
-.finished-projects{
-    
-    width: calc((100% - 48px) / 3);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-.finished-projects:hover .overlay{
-transform: translateY(0%);
-box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.portfolio-product{
-
-        margin-bottom: 8px;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 1.2;
-        letter-spacing: 0.02em;
-        color: #2E2F42;
-        background-color: #FFFFFF;
-}
-.portfolio-projects{
-    row-gap: 48px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    align-items: stretch;
-    justify-content: space-between;
-    
-}
-
-.app{
-
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-    margin-bottom: 8px
-}
-.portfolio-direction{
-
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #434455;
-}
-.overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #4D5AE5;
-    overflow: auto;
-    transform: translateY(100%);
-    transition: transform 250ms linear;
-    padding: 40px 32px;
-    font-family: Roboto;
-    font-size: 16px;
-    color: #F4F4FD;
-    font-weight: 400;
-    height: 100%;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
-.overlay-wrapper{
-    position: relative;
-    overflow: hidden;
-}
-/* ======Portfolio====== */
-
-/* =====Footer======= */
-.footer{
-    background-color: #2E2F42;
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.logo-footer{
-        font-family: Raleway;
-        font-size: 18px;
+.logo{
+    margin-right: 76px;
+        font-family: 'Raleway', sans-serif;
         font-size: 18px;
         font-weight: 700;
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #4d5ae5;
-        text-decoration: none;
-        display: inline-block;
-        margin-bottom: 16px;
 }
-.marketing{
-        max-width: 264px;
-        font-family: Roboto;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--CLOUD, #F4F4FD);
-}
-.studio-footer{
-    color: #F4F4FD;
-}
-.footer-list{
-    align-items: baseline;
-    
-}
-.footer-item{
-    display: flex;
-    align-items: baseline;
-}
-.social{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-    margin-bottom: 16px;
-
-}
-.footer-item-icon{
-   display: flex;
-    gap: 16px;
-}
-.footer-link{
-    width: 40px;
-    height: 40px;
-}
-.footer-icon{
-    fill: #f4f4fd;
-    
-}
-.footer-list-icon:hover,
-.footer-list-icon:focus{
-    background-color: #31d0aa;
-}
-.footer-list-icon{
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    border-radius: 50%;
+ .studio {
+     color: #2e2f42;
+ }
+ .main-conteiner{
     display: flex;
     align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-marketing{
-    align-items: baseline;
-    margin-right: 120px;
-}
-.subscribe-text{
-    margin-bottom: 16px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #ffffff;
+    justify-content: space-between;
+ }
+ @media screen and (min-width: 320px) {
+     .container {
+         width: 320px;
+         margin-left: auto;
+         margin-right: auto;
 
-}
-.subscribe-form{
-    display: flex;
-    gap: 24px;
-}
-.subscribe-input{
-    width: 264px;
-    height: 40px;
-    border: 1px solid #ffffff;
-    background-color: transparent;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    padding-left: 16px;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    color: #ffffff;
-}
-.subscribe-btn{
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
+     }
+ }
+ .mobile-open-btn{
     border: none;
-    border-radius: 4px;
-}
-.subscribe{
-    margin-left: auto;
-}
-/* ======Footer========= */
-/* ====Backdrop===== */
-.backdrop{
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999999999;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-.subscribe-btn-icon{
-    margin-left: 16px;
-}
-/* ====Backdrop===== */
-
-/* ====Modal===== */
-
-.modal{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
-    background-color: #FCFCFC;
-    border-radius: 4px;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 1px 3px rgba(0, 0, 0, 0.12),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
-
-}
-.modal-close-btn{
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
     padding: 0;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-.modal-close-btn:hover,
-.modal-close-btn:focus{
-    background-color: #404bbf;
-    border: none;
-    fill: #ffffff;
-}
-.modal-close-btn-icon{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.review-form-description{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-    margin-bottom: 16px;
-}
-/* ====Modal===== */
-
-/* ======Form===== */
-.review-form-field-wrapper{
-    margin-bottom: 8px;
-}
-.review-form-field-label{
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-    display: block;
-    margin-bottom: 4px;
-
-}
-.comment{
-    margin-bottom: 16px;
-}
-.input-icons{
-    position: relative;
-}
-.review-form-field{
+    line-height: 0;
+ }
+ .mobile-menu{
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    background-color: transparent;
-    padding-left: 38px;
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 100%;
+    z-index: 999999999;
+    background-color: #FFF;
+ }
+ .mobile-menu-close-btn {
+     position: absolute;
+     top: 24px;
+     right: 24px;
+     width: 24px;
+     height: 24px;
+     border-radius: 50%;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     border: 1px solid rgba(0, 0, 0, 0.1);
+     padding: 0;
+     background-color: #ffffff;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-}
-.review-form-field:focus{
-    border-color: #4D5AE5;
-    
-}
-.review-form-field-icon{
-    position: absolute;
-    left: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
 
-}
-.review-form-field:focus + .review-form-field-icon{
-    fill: #4D5AE5;
-}
-.review-form-message{
-    width: 100%;
-    height: 120px;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: rgba(46, 47, 66, 0.4);
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    background-color: transparent;
-    padding: 8px 16px;
-    outline: transparent;
-    resize: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ .mobile-menu-close-btn:hover,
+ .mobile-menu-close-btn:focus {
+     background-color: #404bbf;
+     border: none;
+     fill: #ffffff;
+ }
 
-}
-.review-form-message:focus{
-    border-color: #4D5AE5;
-}
-
-
-.review-form-checkbox-label{
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-
-}
-.review-form-checkbox-wrapper{
-    margin-bottom: 24px;
-
-}
-.review-form-owm-checkbox{
-    width: 16px;
-    height: 16px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    fill: transparent;
-}
-.review-form-checkbox:checked + .review-form-checkbox-label
- .review-form-owm-checkbox{
-    background-color: #404bbf;
-    border: none;
-    fill: #F4F4FD;
-
-}
-.privacy-policy-link{
-    color: #4d5ae5;
-}
-.review-form-btn{
-    display: block;
-    min-width: 169px;
-    height: 56px;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-left: auto;
-    margin-right: auto;
-}
-/* ========Form========== */
+ .mobile-menu-close-btn-icon {
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ }
+/* ========Header Mobile Styles====== */
