--- a/css/styles.css
+++ b/css/styles.css
@@ -138,4 +138,15 @@ body {
  .mobile-menu-close-btn-icon {
      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+ .mobile-studio{
+    color: #404BBF;
+ }
+ .mobile-menu-list{
+        font-family: Roboto;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.1;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+ }
 /* ========Header Mobile Styles====== */
