--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ ol {
 
 img {
     display: block;
+    width: 100%;
+    height: auto;
 }
 
 .list {
@@ -433,10 +435,8 @@ margin: 0 auto;
        background-color: #4D5AE5;
        border: none;
        border-radius: 4px;
-       margin-top: 16px;
        margin-left: auto;
        margin-right: auto;
-       margin-bottom: 96px;
 
    }
 
@@ -929,6 +929,13 @@ margin: 0 auto;
                     letter-spacing: 0.04em;
                     color: #434455;
             }
+                           @media screen and (min-width: 768px) {
+                               .main-title {
+                                   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                           rgba(46, 47, 66, 0.7)),
+                                       url(../../images/retina/Dark-bg@2x-tablet.jpg);
+                               }
+                           }
     /* ======Header Tablet==== */
 /* =====HERO Section Tablet*/
 .main-title {
@@ -1169,9 +1176,6 @@ margin: 0 auto;
 
 
 
-.subscribe {
-    margin-left: auto;
-}
 /* ======Footer Tablet==== */
 /* ====Backdrop Tablet===== */
 .backdrop {
@@ -1410,7 +1414,12 @@ margin: 0 auto;
     text-transform: uppercase;
     color: #4d5ae5;
 }
-
+ @media screen and (min-width: 768px) {
+     .main-title {
+         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                 rgba(46, 47, 66, 0.7)),
+             url(../../images/retina/people-office 1@2x-desktop.jpg);
+     }
 .logo:hover,
 .logo:focus {
     color: #404bbf;
