--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ margin: 0 auto;
    
 
    .name {
-
+        padding-bottom: 32px;
        padding-top: 32px;
        border-radius: 0px 0px 4px 4px;
    }
@@ -302,7 +302,7 @@ margin: 0 auto;
        line-height: 1.2;
        letter-spacing: 0.02em;
        color: #2E2F42;
-       padding-bottom: 8px;
+       margin-bottom: 8px;
 
 
    }
@@ -314,13 +314,12 @@ margin: 0 auto;
        letter-spacing: 0.02em;
        color: #434455;
        text-align: center;
-       padding-bottom: 8px;
+       margin-bottom: 8px;
    }
 
    .benefits-item {
        display: flex;
        gap: 24px;
-       padding-bottom: 32px;
        justify-content: center;
 
    }
@@ -364,7 +363,21 @@ margin: 0 auto;
    .overlay {
        display: none;
    }
-
+.portfolio-product{
+    margin-bottom: 8px;
+        font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            letter-spacing: 0.02em;
+            color: var(--dark);
+}
+.portfolio-direction{
+    font-size: 16px;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: var(--text);
+}
    .portfolio-title {
        margin-bottom: 72px;
        text-align: center;
@@ -397,7 +410,6 @@ margin: 0 auto;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: var(--CLOUD, #F4F4FD);
-       margin-top: 17px;
    }
 
    .studio-footer {
@@ -771,10 +783,11 @@ margin: 0 auto;
         transform: translateX(0%);
     }
 .contact-social-wrapper{
-    margin-top: 148px;
+    margin-top: auto;
 }
     .mobile-contact {
         margin-top: auto;
+        font-style: normal;
 
     }
    .mobile-contact-list {
@@ -829,6 +842,10 @@ margin: 0 auto;
                         rgba(46, 47, 66, 0.7)),
                     url(../../images/retina/Dark-bg@2x-mobile.jpg);
             }
+        }
+        .strengths-name{
+            text-align: center;
+            font-weight: 700;
         }
 }
 
@@ -922,6 +939,12 @@ margin: 0 auto;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         align-items: center;
             }
+            .address-list{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
+            }
             .address-link{
                     font-size: 12px;
                     font-weight: 400;
@@ -933,7 +956,7 @@ margin: 0 auto;
                                .main-title {
                                    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                                            rgba(46, 47, 66, 0.7)),
-                                       url(../../images/retina/Dark-bg@2x-tablet.jpg);
+                                       url(../images/retina/Dark-bg@2x-tablet.jpg);
                                }
                            }
     /* ======Header Tablet==== */
@@ -941,7 +964,6 @@ margin: 0 auto;
 .main-title {
     background-color: #2e2f42;
     padding: 112px 0;
-    width: 768px;
     height: 438px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
@@ -1023,16 +1045,15 @@ margin: 0 auto;
 .strengths-name {
     margin-bottom: 8px;
     font-size: 36px;
-    font-weight: 500;
+    text-align: left;
+    font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: var(--NAVY-BLUE, #2E2F42);
 }
 
 .strengths-descr {
-
     font-size: 16px;
-    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--SLATE, #434455);
@@ -1061,7 +1082,14 @@ margin: 0 auto;
 .finished-projects{
     width: calc((100% - 24px) / 2);
 }
-
+.portfolio-product{
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: var(--dark);
+        margin-bottom: 8px;
+}
 /* =====Our portfolio====== */
 /* ======Footer Tablet==== */
 .footer {
@@ -1502,8 +1530,7 @@ margin: 0 auto;
         align-items: center;
 }
 .address-link {
-    padding-left: 15px;
-    padding-right: 15px;
+
     display: flex;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -1531,7 +1558,6 @@ margin: 0 auto;
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
-    width: 1168px;
     height: 600px;
 
 }
