--- a/css/styles.css
+++ b/css/styles.css
@@ -1425,6 +1425,9 @@ margin: 0 auto;
         font-style: normal;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+    .overlay{
+        display: none;
+    }
 }
  @media screen and (min-width:1168px){
 .container{
